<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="@dimen/layout_margin"
    android:layout_marginEnd="@dimen/layout_margin">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="@dimen/progress_bar_dimen"
        android:layout_height="@dimen/progress_bar_dimen"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAccent"
        android:visibility="visible" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/logged_in_layout"
        android:visibility="gone">

        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="@dimen/image_height_width"
            android:layout_height="@dimen/image_height_width"
            android:layout_margin="@dimen/medium_margin"
            android:adjustViewBounds="true"
            android:background="@drawable/image_border"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/name_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/backgrounds/scenic" />

        <TextView
            android:id="@+id/name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/name"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_small_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintStart_toEndOf="@+id/name_text"
            app:layout_constraintTop_toBottomOf="@+id/profile_image" />

        <TextView
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_text" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_small_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:textSize="@dimen/medium_text_size"
            android:gravity="left"
            app:layout_constraintStart_toEndOf="@id/email_text"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/location_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/medium_margin"
            android:text="@string/location"
            android:textColor="@color/black"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/email_text" />

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/very_small_margin"
            android:layout_marginTop="@dimen/medium_margin"
            android:textSize="@dimen/medium_text_size"
            app:layout_constraintStart_toEndOf="@id/location_text"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/change_image_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@color/blue_200"
            android:text="@string/change_image"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@id/change_password_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/location_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/change_password_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@color/blue_200"
            android:text="@string/change_password"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/logout_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_image_button" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logout_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@color/blue_700"
            android:text="@string/log_out"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/change_password_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/logged_out_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/medium_margin"
            android:textAlignment="center"
            android:textSize="@dimen/big_text_size"
            android:text="@string/login_restriction_text"
            app:layout_constraintBottom_toTopOf="@id/login_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:background="@color/blue_200"
            android:text="@string/log_in"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
</layout>